# Cache

./: .gitignore  CMakeLists.txt  README.md
docs/: perf-analysis-report.md
example/: CMakeLists.txt
example/bench_cache/: CMakeLists.txt  bench_cache.cpp
example/http_gateway/: http_gateway.cpp
include/kcache/: client.h
src/: CMakeLists.txt  main.cpp
src/cache/: lru.cpp
src/client/: client_sdk.cpp
src/consistent_hash/: consistent_hash.cpp
src/group/: group.cpp
src/include/kcache/: cache.h  circuit_breaker.h  consistent_hash.h  group.h  registry.h  server.h  singleflight.h
src/proto/: kcache.proto
src/registry/: registry.cpp
src/server/: server.cpp
test/: CMakeLists.txt  test_circuit_breaker.cpp  test_consistent_hash.cpp  test_group.cpp  test_lru.cpp
